apps/pgadmin/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: nori-cloud
  labels:
    app: pgadmin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.norriswu.me`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
