apps/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: nori-cloud
  labels:
    app: pgadmin
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: pgadmin
      port:
        number: 80
  tls:
    - hosts:
        - pgadmin
